--- a/app/globals.css
+++ b/app/globals.css
@@ -9,32 +9,141 @@ html{
 }
 
 body{
-    @apply text-base text-slate-700 bg-white leading-6 tracking-wide dark:text-slate-100 
+    @apply text-body 
 }
 
-svg,a, button{
+svg, a, button, li{
     @apply cursor-pointer
 }
 
+h1{
+    @apply text-h1
+}
+h2{
+    @apply text-h2
+}
+h3{
+    @apply text-h3
+}
+h4{
+    @apply text-h4
+}
+h5{
+    @apply text-h5
+}
+h6{
+    @apply text-h6
+}
+
+p{
+    @apply text-p
+}
+span{
+    @apply text-span
+}
+
+
+/* input range */
+input[type=range] {
+    -webkit-appearance: none;
+    margin: 18px 0;
+    width: 100%;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #3071a9;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -14px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #367ebd;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #3071a9;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #2a6495;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #3071a9;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  }
+  input[type=range]::-ms-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #3071a9;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #367ebd;
+  }
+ 
 
 /* Scrollbar style */
-
 ::-webkit-scrollbar {
     @apply w-[10px] hidden
 
     /* Customize the scrollbar width */
 }
-
 ::-webkit-scrollbar-track {
     /* Customize the scrollbar track */
 }
-
 ::-webkit-scrollbar-thumb {
     @apply bg-primary-400 rounded-md
     /* Customize the scrollbar thumb */
 }
-
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     @apply bg-black
 }
