--- a/app/globals.css
+++ b/app/globals.css
@@ -153,3 +153,10 @@ input[type=range] {
 .MuiRating-root span{
   font-size: 30px;
 } 
+
+
+/* clerk  */
+
+.cl-internal-16vtwdp{
+  display: none;
+}
